--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
                 width: 100%;
             }
         }
+        
+        img {
+            width: 50%;
+        }
     </style>
 </head>
 
